# ado

./: .env.example  .gitignore  CLAUDE.md  backlog.py  pyproject.toml
.claude/: settings.json
.claude/hooks/: load-context.sh
.github/workflows/: esteira.yml
docs/: STATE.md  glossary.md
docs/architecture/: context-map.md  diagrams.md  overview.md
docs/architecture/_templates/: assessment.template.md
docs/architecture/adr/: 0001-uso-de-adrs.md
docs/engineering/: TESTING.md  agentic-layer.md  metrics.md
docs/engineering/_templates/: integrations.template.md  skill.template.md  subagent.template.md
src/: README.md  __init__.py
src/application/: __init__.py
src/domain/: __init__.py  ports.py  workitem.py
src/infrastructure/: __init__.py
src/interfaces/: __init__.py
tests/unit/: test_workitem.py
